--- a/src/styles.css
+++ b/src/styles.css
@@ -10,6 +10,11 @@ html, button {
 
 body {
     background-image: url("./img/hive.png");
+    background-repeat: no-repeat;
+    background-size: cover;
+    display: flex;
+    flex-direction: column;
+    gap: 40px;
 }
 
 body > * {
@@ -41,4 +46,57 @@ header {
 
 .selectedMenuButton {
     background-color: "rgb(236,164,59)";
+}
+
+div:has(> img) {
+    display: flex;
+    justify-content: center;
+    gap: 40px;
+}
+
+img {
+    width: 200px;
+    height: 200px;
+    border: 5px solid #c16a08;
+    border-radius: 10px;
+}
+
+#content {
+    background-color: #ffde73;
+    padding: 30px;
+    margin: 10px 10px 10% 10px;
+    width: 700px;
+    text-align: center;
+    align-self: center;
+    border-radius: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+#content > div {
+    width: 400px;
+    border: 20px solid #c16a08;
+    padding: 30px;
+    background-color: #FFC60B;
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+h1 {
+    margin-bottom: 20px;
+    width: 500px;
+}
+
+h3 {
+    text-align: left;
+}
+
+
+h1, h2 {
+    border-width: 10px;
+    padding: 10px 20px;
+    background-color: #FFC60B;
+    border: 10px solid #c16a08;
 }
